...
        ZStack {
            Color.black.opacity(0.32)
                .ignoresSafeArea()
                .onTapGesture(perform: dismiss)

            VStack(spacing: 0) {
                Text("탈퇴하시겠습니까?")
                    .font(FillsaTypography.heading4)
                    .foregroundStyle(FillsaColor.onBackground1)
                    .padding(.top, 27)

                Text("탈퇴 후에는 작성하신 필사 정보를 되돌릴 수 없습니다. 😢")
                    .font(FillsaTypography.body2)
                    .foregroundStyle(FillsaColor.onBackground1)
                    .multilineTextAlignment(.center)
                    .lineSpacing(2)
                    .padding(.top, 10)
                    .padding(.horizontal, 16)
...
